# dndyo-backend

./: .env  .env.example  .gitignore  README.md  database.db  pyproject.toml
src/dndyo/: cli.py  tui.py
src/dndyo/app/: main.py
src/dndyo/app/core/: __init__.py  config.py  db.py
src/dndyo/app/core/ai/: ai.py  image_agent.py
src/dndyo/app/core/ai/tools/: __init__.py  state.py
src/dndyo/app/helpers/: battle.py  map_state.py
src/dndyo/app/models/: actor.py  battle.py  chat.py  dice.py  game.py  game_state.py  image.py  inventory_object.py  live_actor.py  map.py
src/dndyo/app/routers/game/: __init__.py  actor.py  chat.py  deps.py  dice.py  game.py  image.py  state.py
tests/: conftest.py  test_ai_tool_calling.py  test_api_crud_and_chat.py  test_battle_helpers.py  test_game_flows.py
